  TEZ-3255. Tez UI: Hide swimlane while displaying running DAGs from old versions of Tez
  TEZ-3259. Tez UI: Build issue - File saver package is not working well with bower
  TEZ-3262. Tez UI : zip.js is not having a bower friendly versioning system
  TEZ-3063. Tez UI: Display Input, Output, Processor, Source and Sink configurations under a vertex

Release 0.8.4: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:

  TEZ-3280. LOG MRInputHelpers split generation message as INFO
  TEZ-3257. Fix flaky test TestUnorderedPartitionedKVWriter.
  TEZ-3237. Corrupted shuffle transfers to disk are not detected during transfer
  TEZ-3246. Improve diagnostics when DAG killed by user
  TEZ-3258. Jvm Checker does not ignore DisableExplicitGC when checking JVM GC options.
  TEZ-3256. [Backport HADOOP-11032] Remove Guava Stopwatch dependency
  TEZ-2342. Reduce bytearray copy with TezEvent Serialization and deserialization
  TEZ-3251. Allow ability to add custom counters to TaskRunner2Callable.
  TEZ-3250. TezTaskRunner2 should accept ExecutorService.
  TEZ-3193. Deadlock in AM during task commit request.
  TEZ-3203. DAG hangs when one of the upstream vertices has zero tasks
  TEZ-3219. Allow service plugins to define log locations link for remotely run task attempts.
  TEZ-3224. User payload is not initialized before creating vertex manager plugin.
  TEZ-3226. Tez UI 2: All DAGs UX improvements.
  TEZ-3077. TezClient.waitTillReady should support timeout.
  TEZ-3202. Reduce the memory need for jobs with high number of segments
  TEZ-3165. Allow Inputs/Outputs to be initialized serially, control processor initialization relative to Inputs/Outputs
  TEZ-3214. Tez UI 2: Pagination in All DAGs
  TEZ-3210. Tez UI 2: license should account for numeral, more-js, loader.js , etc
  TEZ-3087. Tez UI 2: Add log links in task & attempt details page
  TEZ-3146. Tez UI 2: CSS & JS assets in the UI must be minified

Release 0.8.3: 2016-04-14 

INCOMPATIBLE CHANGES